# MLP-Fashion-MNIST-dataset

./: README.md  pyproject.toml
src/: test.ipynb
